// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFieldNote renders with custom value 1`] = `
<div>
  <div
    class="sc-keTIit sc-dpBQxM hWyGdN coZxfb"
  >
     
    <div
      class="sc-cHqXqK fqtnLB"
    >
       
      <svg
        fill="none"
        height="21"
        viewBox="0 0 14 15"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_18_230)"
        >
          <path
            d="M12.5 13C12.5 13.2652 12.3946 13.5196 12.2071 13.7071C12.0196 13.8946 11.7652 14 11.5 14H2.5C2.23478 14 1.98043 13.8946 1.79289 13.7071C1.60536 13.5196 1.5 13.2652 1.5 13V2C1.5 1.73478 1.60536 1.48043 1.79289 1.29289C1.98043 1.10536 2.23478 1 2.5 1H7.5L12.5 6V13Z"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 5H6.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 8H9.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 11H9.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </g>
        <defs>
          <clippath
            id="clip0_18_230"
          >
            <rect
              fill="#F6F6F6"
              height="14"
              transform="translate(0 0.5)"
              width="14"
            />
          </clippath>
        </defs>
      </svg>
       
    </div>
    <div
      class="sc-jtQUzJ bBUtgm"
    >
      <span
        class="sc-cEzcPc jXyaUA"
      >
         
        Note
         
      </span>
      <div
        class="sc-ovuCP fLloyD"
      >
        <input
          class="sc-eOzmre cYAmYU"
          placeholder="Add note"
          type="text"
          value="Test note"
        />
        <div
          class="sc-eauhAA icuOWk"
        >
           
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputFieldNote renders with custom variant 1`] = `
<div>
  <div
    class="sc-keTIit sc-jwIPbr hWyGdN dQeGmb"
  >
     
    <div
      class="sc-cHqXqK fqtnLB"
    >
       
      <svg
        fill="none"
        height="21"
        viewBox="0 0 14 15"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_18_230)"
        >
          <path
            d="M12.5 13C12.5 13.2652 12.3946 13.5196 12.2071 13.7071C12.0196 13.8946 11.7652 14 11.5 14H2.5C2.23478 14 1.98043 13.8946 1.79289 13.7071C1.60536 13.5196 1.5 13.2652 1.5 13V2C1.5 1.73478 1.60536 1.48043 1.79289 1.29289C1.98043 1.10536 2.23478 1 2.5 1H7.5L12.5 6V13Z"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 5H6.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 8H9.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 11H9.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </g>
        <defs>
          <clippath
            id="clip0_18_230"
          >
            <rect
              fill="#F6F6F6"
              height="14"
              transform="translate(0 0.5)"
              width="14"
            />
          </clippath>
        </defs>
      </svg>
       
    </div>
    <div
      class="sc-jtQUzJ bBUtgm"
    >
      <span
        class="sc-cEzcPc jXyaUA"
      >
         
        Note
         
      </span>
      <div
        class="sc-ovuCP fLloyD"
      >
        <input
          class="sc-eOzmre cYAmYU"
          placeholder="Add note"
          type="text"
        />
        <div
          class="sc-eauhAA icuOWk"
        >
           
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputFieldNote renders with default props 1`] = `
<div>
  <div
    class="sc-keTIit sc-dpBQxM hWyGdN coZxfb"
  >
     
    <div
      class="sc-cHqXqK fqtnLB"
    >
       
      <svg
        fill="none"
        height="21"
        viewBox="0 0 14 15"
        width="21"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_18_230)"
        >
          <path
            d="M12.5 13C12.5 13.2652 12.3946 13.5196 12.2071 13.7071C12.0196 13.8946 11.7652 14 11.5 14H2.5C2.23478 14 1.98043 13.8946 1.79289 13.7071C1.60536 13.5196 1.5 13.2652 1.5 13V2C1.5 1.73478 1.60536 1.48043 1.79289 1.29289C1.98043 1.10536 2.23478 1 2.5 1H7.5L12.5 6V13Z"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 5H6.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 8H9.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
          <path
            d="M4.5 11H9.5"
            stroke="#F6F6F6"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </g>
        <defs>
          <clippath
            id="clip0_18_230"
          >
            <rect
              fill="#F6F6F6"
              height="14"
              transform="translate(0 0.5)"
              width="14"
            />
          </clippath>
        </defs>
      </svg>
       
    </div>
    <div
      class="sc-jtQUzJ bBUtgm"
    >
      <span
        class="sc-cEzcPc jXyaUA"
      >
         
        Note
         
      </span>
      <div
        class="sc-ovuCP fLloyD"
      >
        <input
          class="sc-eOzmre cYAmYU"
          placeholder="Add note"
          type="text"
        />
        <div
          class="sc-eauhAA icuOWk"
        >
           
           
        </div>
      </div>
    </div>
  </div>
</div>
`;
